# csvparser

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  csvparser.c  csvparser.h  csvparser.pc.in  csvparserConfig.cmake.in  data.csv  install.ps1  install.sh  large_csv.c  main.c
.github/workflows/: ci.yaml
cmake_example/: CMakeLists.txt  main.c
examples/: large_csv.c  main.c
tests/: test_csvparser.c
